packages/svelte/tests/compiler-errors/samples/runes-wrong-state-args/_config.js
import { test } from '../../test';

export default test({
	error: {
		code: 'invalid-rune-args-length',
		message: '$state can only be called with 0 or 1 arguments'
	}
});
